infer/tests/codetoanalyze/cpp/errors/reference/reference_type_e2e.cpp
../../frontend/reference/reference_type_e2e.cpp